# github-ai-radar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: llm.toml.example  queries.toml  radar.toml  scoring.toml  topics.toml
docs/: database-schema.md  installable-app-roadmap.md  operations.md  release-checklist.md  scoring-rubric.md  system-design.md
src/github_ai_radar/: __init__.py  app_launcher.py  cli.py  config.py  defaults.py  doctor.py  github_client.py  llm.py  paths.py  pipeline.py  reporter.py  scheduler.py  scorer.py  source_collector.py  storage.py  web.py
tests/: test_config.py  test_reporter.py  test_scheduler.py  test_source_collector.py  test_storage.py  test_web_app.py
