[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-radar"
version = "0.3.1"
description = "Local AI application, high-tech finance, and AI biopharma radar with audited daily reports"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "genbenbuxing" }
]
keywords = ["github", "ai", "radar", "agent", "biopharma", "finance", "automation"]
dependencies = [
  "tomli>=2.0; python_version < '3.11'"
]

[project.scripts]
github-ai-radar = "github_ai_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
